; ModuleID = '/home/carl/AnghaBench/linux/drivers/pci/controller/dwc/extr_pcie-uniphier.c_uniphier_pcie_irq_enable.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/pci/controller/dwc/extr_pcie-uniphier.c_uniphier_pcie_irq_enable.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.uniphier_pcie_priv = type { i64 }

@PCL_RCV_INT_ALL_ENABLE = common dso_local global i32 0, align 4
@PCL_RCV_INT = common dso_local global i64 0, align 8
@PCL_RCV_INTX_ALL_ENABLE = common dso_local global i32 0, align 4
@PCL_RCV_INTX = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.uniphier_pcie_priv*)* @uniphier_pcie_irq_enable to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @uniphier_pcie_irq_enable(%struct.uniphier_pcie_priv* %0) #0 {
  %2 = alloca %struct.uniphier_pcie_priv*, align 8
  store %struct.uniphier_pcie_priv* %0, %struct.uniphier_pcie_priv** %2, align 8
  %3 = load i32, i32* @PCL_RCV_INT_ALL_ENABLE, align 4
  %4 = load %struct.uniphier_pcie_priv*, %struct.uniphier_pcie_priv** %2, align 8
  %5 = getelementptr inbounds %struct.uniphier_pcie_priv, %struct.uniphier_pcie_priv* %4, i32 0, i32 0
  %6 = load i64, i64* %5, align 8
  %7 = load i64, i64* @PCL_RCV_INT, align 8
  %8 = add nsw i64 %6, %7
  %9 = call i32 @writel(i32 %3, i64 %8)
  %10 = load i32, i32* @PCL_RCV_INTX_ALL_ENABLE, align 4
  %11 = load %struct.uniphier_pcie_priv*, %struct.uniphier_pcie_priv** %2, align 8
  %12 = getelementptr inbounds %struct.uniphier_pcie_priv, %struct.uniphier_pcie_priv* %11, i32 0, i32 0
  %13 = load i64, i64* %12, align 8
  %14 = load i64, i64* @PCL_RCV_INTX, align 8
  %15 = add nsw i64 %13, %14
  %16 = call i32 @writel(i32 %10, i64 %15)
  ret void
}

declare dso_local i32 @writel(i32, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
